# binf

./: .gitmodules  CMakeLists.txt
include/binf/: Interval.h  Locus.h
include/binf/algorithms/: bitap.h
include/binf/io/fasta/: FastaFile.h
include/binf/io/fastq/: FastqEntry.h  FastqFile.h  FastqIterator.h
include/binf/os/: path.h
include/binf/seqregx/: Expression.h  ITokeniser.h  Matcher.h  Parser.h  Tokeniser.h
src/: Interval.cpp  Locus.cpp  fastq.cpp
src/algorithms/: bitap.cpp
src/io/fasta/: FastaEntry.cpp  FastaEntry.h  FastaFile.cpp  FastaIterator.h
src/io/fastq/: FastqEntry.cpp  FastqFile.cpp
src/os/: path.cpp
src/seqregx/: Expression.cpp  Matcher.cpp  Parser.cpp  Tokeniser.cpp
